--- a/onlinepelvictrainer.css
+++ b/onlinepelvictrainer.css
@@ -63,7 +63,7 @@ header {
 
 .end-function-modal {
     background: #BDD9BF;
-    width: 50%;
+    position: absolute;
     max-height: 150px;
     border: 4px solid #0E3B43;
     border-radius: 5px;
